--- a/shared/package.json
+++ b/shared/package.json
@@ -2,5 +2,12 @@
   "name": "@sybel-io-blockchain/shared",
   "version": "1.0.0",
   "description": "Shared module of the sybel.io repository",
-  "license": "MIT"
+  "license": "MIT",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sybel-app/sybel-io-blockchain"
+  }
 }
