--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,3 +49,8 @@ jobs:
 
       - name: Run tests
         run: pnpm run test
+
+      - name: Publish shared module
+        run: pnpm run publish-packages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
