--- a/contracts/package.json
+++ b/contracts/package.json
@@ -35,5 +35,6 @@
     "@openzeppelin/contracts": "^4.7.3",
     "@openzeppelin/contracts-upgradeable": "^4.8.0-rc.1",
     "hardhat-contract-sizer": "^2.6.1"
-  }
+  },
+  "private": true
 }
