Setting up more complex linter and prettier

--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,15 @@
     "test": {},
     "size": {
       "cache": false
+    },
+    "lint": {
+      "cache": false
+    },
+    "pretty": {
+      "cache": false
+    },
+    "publish": {
+      "dependsOn": ["^build", "lint", "pretty"]
     }
   }
 }
