--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,56 +1,69 @@
 {
-	"name": "@sybel-io-blockchain/contracts",
-	"version": "1.0.0",
-	"description": "All the smart contracts, with the associated tests, scripts and tasks",
-	"license": "MIT",
-	"scripts": {
-		"clean": "hardhat clean",
-		"build": "hardhat compile",
-		"test": "hardhat coverage",
-		"size": "hardhat size-contracts",
-		"lint": "npx solhint contracts/**/*.sol && npx eslint",
-		"pretty": "hardhat format",
-		"format": "prettier --check \"contracts/**/*.sol\" \"**/*.ts\" \"**/*.yml\""
-	},
-	"devDependencies": {
-		"@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
-		"@nomiclabs/hardhat-ethers": "^2.1.0",
-		"@nomiclabs/hardhat-etherscan": "^3.1.0",
-		"@nomiclabs/hardhat-waffle": "^2.0.3",
-		"@openzeppelin/hardhat-upgrades": "^1.19.1",
-		"@typechain/ethers-v5": "^10.1.0",
-		"@typechain/hardhat": "^6.1.2",
-		"@types/chai": "^4.3.3",
-		"@types/mocha": "^10.0.0",
-		"@types/node": "^18.8.0",
-		"chai": "^4.3.6",
-		"dotenv": "^16.0.2",
-		"ethereum-waffle": "^3.4.4",
-		"ethers": "^5.7.0",
-		"hardhat": "^2.11.2",
-		"hardhat-abi-exporter": "^2.10.0",
-		"hardhat-contract-sizer": "^2.6.1",
-		"hardhat-prettier": "^0.0.1",
-		"prettier": "^2.7.1",
-		"prettier-plugin-solidity": "1.0.0-beta.24",
-		"solidity-coverage": "^0.8.2",
-		"ts-node": "^10.8.1",
-		"typechain": "^8.1.0",
-		"typescript": "^4.8.4"
-	},
-	"dependencies": {
-		"@openzeppelin/contracts": "^4.7.3",
-		"@openzeppelin/contracts-upgradeable": "^4.8.0-rc.1",
-		"solhint": "^3.3.7",
-		"@sybel-io-blockchain/eslint-hardhat": "workspace:*",
-		"prettier": "^2.2.1",
-		"prettier-plugin-solidity": "^1.0.0-beta.3"
-	},
-	"eslintConfig": {
-		"extends": [
-			"@sybel-io-blockchain/eslint-hardhat"
-		],
-		"root": true
-	},
-	"private": true
+  "name": "@sybel-io-blockchain/contracts",
+  "version": "1.0.0",
+  "description": "All the smart contracts, with the associated tests, scripts and tasks",
+  "license": "MIT",
+  "scripts": {
+    "clean": "hardhat clean",
+    "build": "hardhat compile",
+    "test": "hardhat tests",
+    "coverage": "hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"test/**/*.ts\" && yarn typechain",
+    "size": "hardhat size-contracts",
+    "lint": "pnpm lint:sol && pnpm lint:ts && pnpm prettier:check",
+    "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
+    "lint:ts": "eslint --config ./.eslintrc.yml --ignore-path ./.eslintignore --ext .js,.ts .",
+    "prettier": "prettier --config ./.prettierrc.yml --write \"**/*.{js,json,md,sol,ts,yml}\"",
+    "prettier:check": "prettier --check --config ./.prettierrc.yml \"**/*.{js,json,md,sol,ts,yml}\""
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
+    "@nomiclabs/hardhat-ethers": "^2.1.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/hardhat-upgrades": "^1.19.1",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.8.0",
+    "chai": "^4.3.6",
+    "dotenv": "^16.0.2",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.7.0",
+    "hardhat": "^2.11.2",
+    "hardhat-abi-exporter": "^2.10.0",
+    "hardhat-contract-sizer": "^2.6.1",
+    "solidity-coverage": "^0.8.2",
+    "ts-node": "^10.8.1",
+    "typechain": "^8.1.0",
+    "typescript": "^4.8.4",
+    "@ethersproject/abi": "^5.6.4",
+    "@ethersproject/abstract-signer": "^5.6.2",
+    "@ethersproject/bignumber": "^5.6.2",
+    "@ethersproject/bytes": "^5.6.1",
+    "@ethersproject/providers": "^5.6.8",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.3",
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
+    "@types/fs-extra": "^9.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "eslint": "^8.21.0",
+    "eslint-config-prettier": "^8.5.0",
+    "fs-extra": "^10.1.0",
+    "hardhat-gas-reporter": "^1.0.8",
+    "lint-staged": "^13.0.3",
+    "lodash": "^4.17.21",
+    "mocha": "^10.0.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.24",
+    "solhint": "^3.3.7",
+    "solhint-plugin-prettier": "^0.0.5",
+    "ts-generator": "^0.1.1"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.7.3",
+    "@openzeppelin/contracts-upgradeable": "^4.8.0-rc.1"
+  },
+  "private": true
 }
