--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "clean": "turbo run clean",
     "build": "turbo run build",
     "test": "turbo run test",
-    "size": "turbo run size"
+    "size": "turbo run size",
+    "lint": "turbo run lint",
+    "pretty": "turbo run pretty"
   },
   "engines": {
     "npm": ">=8.0.0",
