--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "clean": "hardhat clean",
     "build": "hardhat compile",
     "test": "hardhat test",
-    "coverage": "hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"test/**/*.ts\" && pnpm typechain",
+    "coverage": "hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"test/**/*.ts\" && npm typechain",
     "size": "hardhat size-contracts",
-    "lint": "pnpm lint:sol && pnpm lint:ts && pnpm prettier:check",
+    "lint": "npm lint:sol && npm lint:ts && npm prettier:check",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --config ./.eslintrc.yml --ignore-path ./.eslintignore --ext .js,.ts .",
     "prettier": "prettier --config ./.prettierrc --write \"**/*.{js,json,md,sol,ts,yml}\"",
@@ -40,7 +40,7 @@
     "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.3.3",
     "@types/fs-extra": "^9.0.13",
-    "@types/mocha": "^10.0.0",
+    "@types/mocha": "^9.1.0",
     "@types/node": "^18.8.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
