--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,8 @@
 name: Publish shared packages
 
-on:
-  push:
-    branches: ["main"]
+#on:
+#  push:
+#    branches: ["main"]
 
 env:
   MUMBAI_PROVIDER: ${{ secrets.MUMBAI_PROVIDER }}
