--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,14 @@ tools/**/*.log
 
 # build folder
 build/
+
+# Ignores development broadcast logs
+!/broadcast
+/broadcast/*/31337/
+/broadcast/**/dry-run/
+
+# Lib folder
+lib/
+
+# Cache folder
+forge-cache/
