💚 Fix env variable for the CI tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
 env:
   MUMBAI_PROVIDER: ${{ secrets.MUMBAI_PROVIDER }}
   GOERLI_PROVIDER: ${{ secrets.GOERLI_PROVIDER }}
-  SYBEL_DEPLOY_PRIV_KEY: ${{ secrets.SYBEL_DEPLOY_PRIVATE_KEY }}
+  FRAK_DEPLOY_PRIV_KEY: ${{ secrets.SYBEL_DEPLOY_PRIVATE_KEY }}
   POLYGON_SCAN_API_KEY: ${{ secrets.POLYGONSCAN_API_KEY }}
   ETHER_SCAN_API_KEY: ${{ secrets.ETHER_SCAN_API_KEY }}
   COIN_MARKET_CAP_API_KEY: ${{ secrets.COIN_MARKET_CAP_API_KEY }}
