--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ on:
 env:
   MUMBAI_PROVIDER: ${{ secrets.MUMBAI_PROVIDER }}
   GOERLI_PROVIDER: ${{ secrets.GOERLI_PROVIDER }}
+  POLYGON_PROVIDER: ${{ secrets.POLYGON_PROVIDER }}
   FRAK_DEPLOY_PRIV_KEY: ${{ secrets.SYBEL_DEPLOY_PRIVATE_KEY }}
   POLYGON_SCAN_API_KEY: ${{ secrets.POLYGONSCAN_API_KEY }}
   ETHER_SCAN_API_KEY: ${{ secrets.ETHER_SCAN_API_KEY }}
