forge install: foundry-upgrades

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/prb-test"]
 	path = lib/prb-test
 	url = https://github.com/paulrberg/prb-test
+[submodule "lib/foundry-upgrades"]
+	path = lib/foundry-upgrades
+	url = https://github.com/odyslam/foundry-upgrades
