--- a/foundry.toml
+++ b/foundry.toml
@@ -8,7 +8,7 @@ cache_path = 'forge-cache'
 # Optimizer config
 optimizer = true
 optimizer_runs = 10000
-via_ir = true
+via_ir = false
 
 [profile.default.optimizer_details]
 constantOptimizer = true
