--- a/foundry.toml
+++ b/foundry.toml
@@ -4,11 +4,12 @@ out = 'out'
 libs = ['node_modules', 'lib']
 test = 'test/foundry'
 cache_path = 'forge-cache'
+# extra_output = ["ir", "irOptimized"]
+# extra_output = ["irOptimized"]
 
 # Optimizer config
 optimizer = true
 optimizer_runs = 10000
-via_ir = false
 
 [profile.default.optimizer_details]
 constantOptimizer = true
