--- a/foundry.toml
+++ b/foundry.toml
@@ -9,7 +9,8 @@ cache_path = 'forge-cache'
 
 # Optimizer config
 optimizer = true
-optimizer_runs = 10000
+optimizer_runs = 100_000
+via-ir = true
 
 [profile.default.optimizer_details]
 constantOptimizer = true
