--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "^18.11.4",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
+    "@wagmi/cli": "^0.1.15",
     "chai": "^4.3.6",
     "dotenv": "^16.0.3",
     "eslint": "^8.26.0",
