--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,39 +29,38 @@ jobs:
         with:
           node-version: "18.x"
 
-      - name: '💾 Cache node modules'
-        id: cache-npm
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-
       - name: '🔨 Install dependencies'
         run: npm i
     
       - name: '🔨 Install Foundry'
         uses: foundry-rs/foundry-toolchain@v1
-
+        with:
+          version: nightly
+      
+      - name: '💾 Foundry fork cache'
+        uses: actions/cache@v3
+        with:
+          path: "~/.foundry/cache"
+          key: foundry-${{ hashFiles('Makefile', 'foundry.toml') }} # where fork block numbers & RPC are stored
+      
+      - name: '💾 Foundry compilation cache'
+        uses: actions/cache@v3
+        with:
+          path: |
+            cache
+            out
+          key: ${{ github.base_ref || github.ref_name }}-foundry
+          
       - name: '🧪 Run tests'
         run: forge test --gas-report > gasreport.ansi 
-        env:
-          # make fuzzing semi-deterministic to avoid noisy gas cost estimation
-          # due to non-deterministic fuzzing (but still use pseudo-random fuzzing seeds)
-          FOUNDRY_FUZZ_SEED: 0x${{ github.event.pull_request.base.sha || github.sha }}
 
       - name: '📈 Compare gas reports'
         uses: Rubilmax/foundry-gas-diff@v3.15
         with:
           summaryQuantile: 0.9 # only display the 10% most significant gas diffs in the summary (defaults to 20%)
-          sortCriteria: avg,max # sort diff rows by criteria
-          sortOrders: desc,asc # and directions
+          ignore: test/**/*
+          header: |
+            # Frak gas diffs
         id: gas_diff
 
       - name: '📝 Add gas diff to sticky comment'
