--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@ path = lib/prb-test
 url = https://github.com/paulrberg/prb-test
 [submodule "lib/forge-std"]
 path = lib/forge-std
-url = https://github.com/lib/forge-std
+url = https://github.com/foundry-rs/forge-std
