--- a/foundry.toml
+++ b/foundry.toml
@@ -20,7 +20,7 @@ yul = true
 [fuzz]
 runs = 2048
 max_test_rejects = 65536
-seed = '0x3e8'
+seed = '0xacab'
 dictionary_weight = 40
 include_storage = true
 include_push_bytes = true
