--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "preinstall": "npx only-allow pnpm",
     "clean": "hardhat clean",
     "build": "hardhat compile --concurrency 4",
-    "test": "hardhat test",
+    "test": "pnpm test:forge && pnpm test:storage",
+    "test:forge": "forge test",
+    "test:hardhat": "hardhat test",
+    "test:storage": "npx @openzeppelin/upgrades-core validate out/build-info",
     "coverage": "hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"test/**/*.ts\" && npm typechain",
     "size": "hardhat size-contracts --concurrency 4",
     "generate": "wagmi generate"
@@ -31,6 +34,7 @@
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@openzeppelin/hardhat-upgrades": "^1.28.0",
+    "@openzeppelin/upgrades-core": "^1.27.1",
     "@trivago/prettier-plugin-sort-imports": "^3.4.0",
     "@typechain/ethers-v5": "^10.2.1",
     "@typechain/hardhat": "^6.1.6",
