--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,12 @@ url = https://github.com/paulrberg/prb-test
 [submodule "lib/forge-std"]
 path = lib/forge-std
 url = https://github.com/foundry-rs/forge-std
+[submodule "lib/openzeppelin-contracts"]
+	path = lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "lib/openzeppelin-contracts-upgradeable"]
+	path = lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "lib/solady"]
+	path = lib/solady
+	url = https://github.com/vectorized/solady
