--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ethersproject/bignumber": "^5.7.0",
     "@ethersproject/bytes": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
+    "@foundry-rs/hardhat-forge": "^0.1.17",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
@@ -56,6 +57,7 @@
     "hardhat-contract-sizer": "^2.10.0",
     "hardhat-docgen": "^1.3.0",
     "hardhat-gas-reporter": "^1.0.9",
+    "hardhat-preprocessor": "^0.1.5",
     "lint-staged": "^13.2.2",
     "lodash": "^4.17.21",
     "mocha": "^10.2.0",
@@ -68,13 +70,6 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.2.0",
     "typescript": "^4.9.5"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.9.2",
-    "@openzeppelin/contracts-upgradeable": "^4.9.2",
-    "cpy-cli": "^4.2.0",
-    "solady": "^0.0.78",
-    "solmate": "^6.7.0"
   },
   "private": true,
   "engines": {
