--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@frak-id-blockchain/contracts",
   "version": "1.0.0",
-  "description": "All the smart contracts, with the associated tests, scripts and tasks",
+  "description": "All the FRAK smart contracts, with the associated tests, scripts and tasks",
   "license": "MIT",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
@@ -21,52 +21,9 @@
     "generate": "wagmi generate"
   },
   "devDependencies": {
-    "@ethersproject/abi": "^5.7.0",
-    "@ethersproject/abstract-signer": "^5.7.0",
-    "@ethersproject/bignumber": "^5.7.0",
-    "@ethersproject/bytes": "^5.7.0",
-    "@ethersproject/providers": "^5.7.2",
-    "@foundry-rs/hardhat-forge": "^0.1.17",
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@nomiclabs/hardhat-etherscan": "^3.1.7",
-    "@openzeppelin/hardhat-upgrades": "^1.28.0",
     "@openzeppelin/upgrades-core": "^1.27.1",
-    "@trivago/prettier-plugin-sort-imports": "^3.4.0",
-    "@typechain/ethers-v5": "^10.2.1",
-    "@typechain/hardhat": "^6.1.6",
-    "@types/chai": "^4.3.5",
-    "@types/fs-extra": "^9.0.13",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^18.16.18",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
     "@wagmi/cli": "^0.1.15",
-    "chai": "^4.3.7",
-    "dotenv": "^16.3.1",
-    "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.8.0",
-    "ethers": "^5.7.2",
-    "fs-extra": "^10.1.0",
-    "hardhat": "^2.16.0",
-    "hardhat-abi-exporter": "^2.10.1",
-    "hardhat-contract-sizer": "^2.10.0",
-    "hardhat-docgen": "^1.3.0",
-    "hardhat-gas-reporter": "^1.0.9",
-    "hardhat-preprocessor": "^0.1.5",
-    "lint-staged": "^13.2.2",
-    "lodash": "^4.17.21",
-    "mocha": "^10.2.0",
-    "prettier": "^2.8.8",
-    "prettier-plugin-solidity": "^1.1.3",
-    "solhint": "^3.4.1",
-    "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.8.3",
-    "ts-generator": "^0.1.1",
     "ts-node": "^10.9.1",
-    "typechain": "^8.2.0",
     "typescript": "^4.9.5"
   },
   "private": true,
