--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@ url = https://github.com/foundry-rs/forge-std
 [submodule "lib/solady"]
 	path = lib/solady
 	url = https://github.com/vectorized/solady
+[submodule "lib/singleton-swapper"]
+	path = lib/singleton-swapper
+	url = https://github.com/frak-id/singleton-swapper
