🚀 Deploy swapper to mumbai

--- a/foundry.toml
+++ b/foundry.toml
@@ -48,12 +48,12 @@ include_push_bytes = true
 # Config for deployment
 [rpc_endpoints]
 goerli = "${GOERLI_RPC_URL}"
-polygonMumbai = "${MUMBAI_RPC_URL}"
+mumbai = "${MUMBAI_RPC_URL}"
 polygon = "${POLYGON_RPC_URL}"
 
 # Config for verification
 [etherscan]
-polygonMumbai = { key = "${POLYGON_SCAN_API_KEY}", url = "https://api-testnet.polygonscan.com/api" }
+mumbai = { key = "${POLYGON_SCAN_API_KEY}", url = "https://api-testnet.polygonscan.com/api" }
 polygon = { key = "${POLYGON_SCAN_API_KEY}", url = "https://api.polygonscan.com/api" }
 goerli = {key = "${ETHERSCAN_SCAN_API_KEY}", url = "https://api-goerli.etherscan.io/api"}
 mainnet = {key = "${ETHERSCAN_SCAN_API_KEY}"}
