--- a/foundry.toml
+++ b/foundry.toml
@@ -20,7 +20,7 @@ extra_output = ["storageLayout"]
 # Optimizer config
 optimizer = true
 optimizer_runs = 100_000
-via-ir = true
+via-ir = false
 
 [profile.default.optimizer_details]
 constantOptimizer = true
@@ -55,5 +55,5 @@ polygon = "${POLYGON_RPC_URL}"
 [etherscan]
 mumbai = { key = "${POLYGON_SCAN_API_KEY}", url = "https://api-testnet.polygonscan.com/api" }
 polygon = { key = "${POLYGON_SCAN_API_KEY}", url = "https://api.polygonscan.com/api" }
-goerli = {key = "${ETHERSCAN_SCAN_API_KEY}", url = "https://api-goerli.etherscan.io/api"}
-mainnet = {key = "${ETHERSCAN_SCAN_API_KEY}"}
+goerli = { key = "${ETHERSCAN_SCAN_API_KEY}", url = "https://api-goerli.etherscan.io/api" }
+mainnet = { key = "${ETHERSCAN_SCAN_API_KEY}" }
