--- a/foundry.toml
+++ b/foundry.toml
@@ -28,12 +28,14 @@ yul = true
 
 # Fuzzing config
 [fuzz]
-runs = 2048
-max_test_rejects = 65536
-seed = '0xacab'
-dictionary_weight = 40
+runs = 1000
 include_storage = true
 include_push_bytes = true
+
+# CI config
+[profile.ci]
+  fuzz = { runs = 10_000, seed = '0xacab' }
+  verbosity = 4
 
 # Invariant config
 [invariant]
@@ -45,15 +47,25 @@ dictionary_weight = 80
 include_storage = true
 include_push_bytes = true
 
-# Config for deployment
-[rpc_endpoints]
-goerli = "${GOERLI_RPC_URL}"
-mumbai = "${MUMBAI_RPC_URL}"
-polygon = "${POLYGON_RPC_URL}"
-
-# Config for verification
 [etherscan]
-mumbai = { key = "${POLYGON_SCAN_API_KEY}", url = "https://api-testnet.polygonscan.com/api" }
-polygon = { key = "${POLYGON_SCAN_API_KEY}", url = "https://api.polygonscan.com/api" }
-goerli = { key = "${ETHERSCAN_SCAN_API_KEY}", url = "https://api-goerli.etherscan.io/api" }
-mainnet = { key = "${ETHERSCAN_SCAN_API_KEY}" }
+  mainnet = { key = "${API_KEY_ETHERSCAN}" }
+  goerli = { key = "${API_KEY_ETHERSCAN}", url = "https://api-goerli.etherscan.io/api" }
+  polygon = { key = "${API_KEY_POLYGONSCAN}", url = "https://api.polygonscan.com/api" }
+  mumbai = { key = "${API_KEY_POLYGONSCAN}", url = "https://api-testnet.polygonscan.com/api" }
+
+[fmt]
+  bracket_spacing = true
+  int_types = "long"
+  line_length = 120
+  multiline_func_header = "all"
+  number_underscore = "thousands"
+  quote_style = "double"
+  tab_width = 4
+  wrap_comments = true
+
+[rpc_endpoints]
+  localhost = "http://localhost:8545"
+  mainnet = "https://eth-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY_MAINNET}"
+  goerli = "https://eth-goerli.g.alchemy.com/v2/${API_KEY_ALCHEMY_GOERLI}"
+  polygon = "https://polygon-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY_POLYGON}" 
+  mumbai = "https://polygon-mumbai.g.alchemy.com/v2/${API_KEY_ALCHEMY_MUMBAI}"
