--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "pnpm test:forge && pnpm test:storage",
     "test:forge": "forge test",
     "test:storage": "npx @openzeppelin/upgrades-core validate out/build-info",
-    "coverage": "forge coverage",
+    "coverage": "forge coverage --report lcov",
     "generate": "wagmi generate",
     "generate:react": "wagmi generate -c ./wagmi-react.config.ts"
   },
