--- a/.github/workflows/security-analysis.yml
+++ b/.github/workflows/security-analysis.yml
@@ -1,4 +1,4 @@
-name: 🔒️ Smart contract security analysis
+name: 🔒️ Security analysis
 
 on:
   workflow_dispatch:
@@ -6,10 +6,13 @@ on:
   push:
     branches: ["main"]
 
-# cancel previous runs on the same PR
+# Cancel previous runs on the same PR
 concurrency:
   group: ${{ github.ref }}-analysis
   cancel-in-progress: true
+
+env:
+  FOUNDRY_PROFILE: "ci"
 
 jobs:
   analyze:
