--- a/.github/workflows/security-analysis.yml
+++ b/.github/workflows/security-analysis.yml
@@ -2,9 +2,9 @@ name: 🔒️ Security analysis
 
 on:
   workflow_dispatch:
-  pull_request:
-  push:
-    branches: ["main"]
+#  pull_request:
+#  push:
+#    branches: ["main"]
 
 # Cancel previous runs on the same PR
 concurrency:
