--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "test": "pnpm test:forge && pnpm test:storage",
     "test:forge": "forge test",
     "test:storage": "npx @openzeppelin/upgrades-core validate out/build-info",
-    "coverage": "forge coverage --report lcov",
+    "coverage:report": "forge coverage --report lcov",
+    "coverage:html": "lcov-viewer lcov -o ./coverage ./lcov.info",
+    "coverage": "pnpm coverage:report && pnpm coverage:html && open ./coverage/index.html",
     "generate": "wagmi generate",
     "generate:react": "wagmi generate -c ./wagmi-react.config.ts"
   },
   "devDependencies": {
+    "@lcov-viewer/cli": "^1.3.0",
     "@openzeppelin/upgrades-core": "^1.28.0",
     "@wagmi/cli": "^1.4.1",
     "ts-node": "^10.9.1",
