--- a/package.json
+++ b/package.json
@@ -20,15 +20,14 @@
     "coverage:report": "forge coverage --report lcov",
     "coverage:html": "lcov-viewer lcov -o ./coverage ./lcov.info",
     "coverage": "pnpm coverage:report && pnpm coverage:html && open ./coverage/index.html",
-    "generate": "wagmi generate",
-    "generate:react": "wagmi generate -c ./wagmi-react.config.ts"
+    "generate": "wagmi generate"
   },
   "devDependencies": {
     "@lcov-viewer/cli": "^1.3.0",
-    "@openzeppelin/upgrades-core": "^1.30.1",
-    "@wagmi/cli": "^1.5.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "@openzeppelin/upgrades-core": "^1.32.2",
+    "@wagmi/cli": "^2.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "private": true,
   "engines": {
